# Quantum-Field-Dynamics

./: .gitignore  7754_SNE_DATASET_ISSUE.md  BlackHoleDynamics16.html  C2_ANALYTICAL_DERIVATION.md  CCL_VALIDATION_COMPLETE.md  CHECK_TEST_STATUS.sh  CITATION.cff  CLAUDE.md  CLEANUP_PLAN.md  CRITICAL_PARAMETER_CONFUSION_RESOLVED.md  DATA_DEPENDENCIES.md  DISASTER_RECOVERY_PLAN.md  DOCS_CATEGORIZATION.md  Dockerfile  FINAL_PROJECT_SUMMARY.md  GRAND_SOLVER_FILE_MANIFEST.txt  GRAND_SOLVER_RESULTS.txt  GRAND_SOLVER_v1.0-beta_TAG.md  KOIDE_OVERNIGHT_RESULTS.md  LEAN_PROOF_INDEX.txt  LEAN_PROOF_STATUS.md  LEVEL4_ROADMAP.md  LEVEL4_SUMMARY.txt  LICENSE  Lepton.md  META_REVIEW_ASSESSMENT.md  MNRAS_FIGURES_SUMMARY.md  NuclideTable4.html  PARAMETER_CLOSURE_PLAN.md  PARAMETER_CLOSURE_ROADMAP.txt  PARAMETER_INVENTORY.md  PHYSICS_MODEL_V15.md  PROJECTS_MIGRATION_PLAN.md  PROJECT_INDEX.md  PoyntingVectors.py  QFD.lean  QFD1.html  QFD2.html  QFDInfographic3.html  QFD_CONSTANTS_SCHEMA.md  (+49 more)
Lepton_Isomers/: .gitignore  GEMINI.md  LICENSE  README.md  THEORETICAL_FRAMEWORK.md  notes.txt  patch_features.py  pyproject.toml  requirements.txt  run_tests.py  setup.py  test_datetime_issue.py  test_file_integrity.txt  test_replace.txt  test_stability.py  v2_fit_report.json  v2_grid_search_report.json  v2_grid_search_report_final.json
Lepton_Isomers/.claude/: settings.local.json
Lepton_Isomers/QFD_Phoenix_Refactored.egg-info/: PKG-INFO  SOURCES.txt
Lepton_Isomers/data/: tau_list.txt
Lepton_Isomers/diag_20250907_194427/: QFD_fit_lifetimes_v3.py  build_min_bundles.py  bundle_manifest.json  fit_v3_qR_over_I.json  fit_v3_qR_over_I_anchored.json  fit_v3_qR_over_I_anchored_zeeman.json  fit_v3_qR_over_I_zeeman.json  summary.json
Lepton_Isomers/examples/: complete_g2_workflow_example.py  create_v2_bundles.py  generate_chi_mode_report.py  patch_v2_bundles.py  stability_analysis_example.py  tune_geometric_exponents.py
Lepton_Isomers/rosetta_run_outputs/electron/: ladder_summary.json
Lepton_Isomers/rosetta_run_outputs/electron/ladder_01/: results.json
Lepton_Isomers/rosetta_run_outputs/electron/ladder_02/: results.json
Lepton_Isomers/rosetta_run_outputs/electron/ladder_03/: results.json
Lepton_Isomers/rosetta_run_outputs/muon/: ladder_summary.json
Lepton_Isomers/rosetta_run_outputs/muon/ladder_01/: results.json
Lepton_Isomers/rosetta_run_outputs/muon/ladder_02/: results.json
Lepton_Isomers/rosetta_run_outputs/muon/ladder_03/: results.json
Lepton_Isomers/rosetta_run_outputs/tau/: ladder_summary.json
Lepton_Isomers/rosetta_run_outputs/tau/ladder_01/: results.json
Lepton_Isomers/rosetta_run_outputs/tau/ladder_02/: results.json
Lepton_Isomers/rosetta_run_outputs/tau/ladder_03/: results.json
Lepton_Isomers/rosetta_stability_analysis/: stability_analysis.json
Lepton_Isomers/src/: __init__.py
Lepton_Isomers/src/constants/: __init__.py  electron.json  muon.json  tau.json
Lepton_Isomers/src/features/: angular_momentum.py  csr_handle.py
Lepton_Isomers/src/orchestration/: QFD_fit_lifetimes_v2.py  QFD_fit_lifetimes_v3.py  QFD_stability_predictor_v2.py  __init__.py  g2_predictor_batch.py  g2_workflow.py  isomer_workflow.py  ladder_solver.py  robustness_runner.py  run_free_electron.py
Lepton_Isomers/src/probes/: zeeman_probe.py
Lepton_Isomers/src/solvers/: __init__.py  backend.py  hamiltonian.py  phoenix_solver.py  zeeman_experiments.py
Lepton_Isomers/src/utils/: __init__.py  analysis.py  io.py  stability_analysis.py  stability_predictor.py
Lepton_Isomers/src/validation/: __init__.py
Lepton_Isomers/stability_analysis_test_output/: stability_analysis_constrained.json
Lepton_Isomers/tests/integration/: test_isomer_framework.py  test_package.py
Lepton_Isomers/tools/: build_min_bundles.py  bundle_features.csv  patch_anchor_keys.py  patch_manifests.py  patch_qfd_code.py  patch_qproxy_final.py  patch_summary_for_fitter.py
Lepton_Isomers/v2_bundles/electron_511keV_v1/: bundle_manifest.json  bundle_manifest_patched.json  features.json  summary.json
Lepton_Isomers/v2_bundles/muon_105MeV_v1/: bundle_manifest.json  bundle_manifest_patched.json  features.json  summary.json
Lepton_Isomers/v2_bundles/tau_1777MeV_v1/: bundle_manifest.json.bak  bundle_manifest_patched.json  features.json  summary.json
Photon/: .gitignore  (+18 more)
archive/v15/RedShift/: LICENSE  MANIFEST.in  documentation_review.py  pyproject.toml  pytest.ini  requirements-dev.txt
archive/v15/RedShift/data/: README.md  data_utils.py  generate_sample_data.py
archive/v15/RedShift/data/sample/: dataset_metadata.json
archive/v15/RedShift/docs/: PHYSICS_DISTINCTION.md  conf.py  examples.rst  index.rst  quickstart.rst  release_process.md  version_management.md
archive/v15/RedShift/docs/_build/html/: contributing.html  examples.html  installation.html  search.html
archive/v15/RedShift/docs/_build/html/_modules/: index.html
archive/v15/RedShift/docs/api/: modules.rst  qfd_cmb.figures.rst  qfd_cmb.projector.rst
archive/v15/RedShift/examples/: README.md  basic_analysis.py  basic_redshift_analysis.py  basic_usage.py  tutorial_notebook.ipynb
archive/v15/RedShift/outputs/: qfd_demo_spectra.csv
archive/v15/RedShift/scripts/: bump_version.bat  release.bat
archive/v15/RedShift/tests/: conftest.py  test_integration.py  test_kernels.py  test_visibility.py
projects/astrophysics/qfd-sn-v22/: COMPLETE_TRANSPARENCY.md  DEVELOPMENT_STATUS.md  PACKAGE_COMPLETE.md  README.md  pyproject.toml
projects/astrophysics/qfd-sn-v22/configs/: des1499.yaml
projects/astrophysics/qfd-sn-v22/data/precomputed_filtered/: README.md  processing_log.json  stage1_results_filtered.csv
projects/astrophysics/qfd-sn-v22/scripts/: download_des5yr.sh  quick_validation_v21_data.py  reproduce_from_filtered.sh  reproduce_from_raw.sh
projects/astrophysics/qfd-sn-v22/src/qfd_sn/: __init__.py  cosmology.py  qc.py  stage1_fit.py  stage2_mcmc.py  stage3_hubble.py
projects/astrophysics/qfd-sn-v22/src/qfd_sn/lean_validation/: __init__.py  constraints.py  report_generator.py  schema_interface.py
projects/astrophysics/qfd-sn-v22/tests/: test_with_v21_data.py
(+3406 files in other folders)
