[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qfd-phoenix-refactored"
version = "0.1.0"
authors = [
    {name = "QFD Research Team", email = "qfd@research.org"},
]
description = "Quantum Field Dynamics simulations for lepton g-2 calculations"
readme = "readme.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research", 
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0", 
    "matplotlib>=3.5.0",
    "pandas>=1.3.0",
    "PyYAML>=6.0",
    "tqdm>=4.62.0",
]

[project.optional-dependencies]
gpu = ["cupy-cuda11x>=10.0.0", "torch>=1.12.0"]
dev = ["pytest>=6.0", "black>=22.0", "flake8>=4.0", "mypy>=0.950"]
docs = ["sphinx>=4.0", "sphinx-rtd-theme>=1.0"]
all = ["qfd-phoenix-refactored[gpu,dev,docs]"]

[project.scripts]
qfd-electron = "orchestration.run_free_electron:main"
qfd-ladder = "orchestration.ladder_solver:main" 
qfd-solver = "solvers.phoenix_solver:main"
qfd-g2-batch = "orchestration.g2_predictor_batch:main"
qfd-g2-workflow = "orchestration.g2_workflow:main"

[project.urls]
Homepage = "https://github.com/qfd-research/phoenix-refactored"
"Bug Reports" = "https://github.com/qfd-research/phoenix-refactored/issues"
Source = "https://github.com/qfd-research/phoenix-refactored"
Documentation = "https://qfd-phoenix.readthedocs.io/"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
constants = ["*.json"]
"*" = ["*.yaml", "*.yml"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "numpy.*",
    "scipy.*",
    "matplotlib.*",
    "pandas.*",
    "torch.*",
    "cupy.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
pythonpath = [
    "src"
]