[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qfd-sn"
version = "22.0.0"
description = "QFD Supernova Cosmology Analysis with Lean 4 Formal Verification"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "QFD Cosmology Team"}
]
keywords = ["cosmology", "supernovae", "QFD", "Lean4", "formal-verification"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "emcee>=3.1.0",
    "corner>=2.2.0",
    "astropy>=4.3.0",
    "h5py>=3.1.0",
    "tqdm>=4.62.0",
    "pyyaml>=5.4.0",
    "requests>=2.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]
notebooks = [
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]
docs = [
    "sphinx>=4.5.0",
    "sphinx-rtd-theme>=1.0.0",
]

[project.scripts]
qfd-sn = "qfd_sn.pipeline:main"

[project.urls]
Homepage = "https://github.com/your-org/qfd-sn-v22"
Repository = "https://github.com/your-org/qfd-sn-v22"
Issues = "https://github.com/your-org/qfd-sn-v22/issues"
Documentation = "https://qfd-sn-v22.readthedocs.io"

[tool.setuptools]
packages = ["qfd_sn"]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
